fix: tentativa de corrigir erro requisito 11 no avaliador github - adiciona z-index em dois elementos

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -22,4 +22,5 @@
   right: 0;
   text-align: center;
   width: 75%;
+  z-index: 1;
 }
