--- a/src/components/RecipeDetails.module.css
+++ b/src/components/RecipeDetails.module.css
@@ -5,7 +5,7 @@
 .recipeDetails > aside {
   align-items: center;
   display: flex;
-  gap: 1%;
+  gap: 3%;
   justify-content: flex-start;
   margin: 20px auto 70px;
   overflow-x: auto;
